--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *.rna
-example-manyfiles/*.txt
-example-errors/errno.h
-example-errors/strerror.c
+example/manyfiles/*.txt
+example/errors/errno.h
+example/errors/strerror.c
