More work on automatic testing
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,9 @@
 
+%.sh: %.dna ../ribosome runtest.dna
+	../ribosome runtest.dna $* > $@
+	chmod +x $@
+
 TESTS = \
-    basic1\
-    basic2
+    basic1.sh\
+    basic2.sh
+
