ribosome executable renamed to ribosome.rb
This change is done in preparation for ribosome variants with non-Ruby control languages.

Signed-off-by: sustrik <sustrik@localhost>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
 
-%.sh: %.dna ../ribosome runtest.dna
-	../ribosome runtest.dna $* > $@
+%.sh: %.dna ../ribosome.rb runtest.dna
+	../ribosome.rb runtest.dna $* > $@
 	chmod +x $@
 
 TESTS = \
