ribosome.js is installed by 'make install'
Signed-off-by: sustrik <sustrik@localhost>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,10 @@
 SUBDIRS = tests
 DIST_SUBDIRS = tests
 
-dist_bin_SCRIPTS = ribosome.rb
+dist_bin_SCRIPTS = ribosome.rb ribosome.js
 
 ribosome.rb:
+
+ribosome.js:
 
 
