Ruby test files renamed to *.rb.dna
Signed-off-by: sustrik <sustrik@localhost>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,5 @@
 
-%.sh: %.dna ../ribosome.rb runtest.dna
+%.sh: %.rb.dna ../ribosome.rb runtest.dna
 	../ribosome.rb runtest.dna $* > $@
 	chmod +x $@
 
