README now includes python examples
Signed-off-by: sustrik <sustrik@localhost>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,12 @@
 SUBDIRS = tests
 DIST_SUBDIRS = tests
 
-dist_bin_SCRIPTS = ribosome.rb ribosome.js
+dist_bin_SCRIPTS = ribosome.rb ribosome.js ribosome.py
 
 ribosome.rb:
 
 ribosome.js:
+
+ribosome.py:
 
 
