install python3 in travis
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ os:
 
 sudo: required
 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y python3
+
 branches:
   only:
     - master
